# youtube_ai_comment_guard

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: Dockerfile  README.md  pyproject.toml
backend/src/youtube_guard/: config.py  main.py  models.py
backend/src/youtube_guard/routers/: __init__.py  auth.py  comments.py  scheduler.py
backend/src/youtube_guard/services/: ai_service.py  firestore_service.py  youtube_service.py
backend/tests/: conftest.py  test_api.py
frontend/: .env.dev  .env.prd  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: robots.txt
frontend/scripts/: generate-robots.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CommentCard.jsx  Dashboard.jsx  Header.jsx  LandingPage.jsx  ReplyModal.jsx
frontend/src/components/__tests__/: ReplyModal.test.jsx
frontend/src/contexts/: AuthContext.jsx
terraform/: aws_frontend.tf  example.tfvars  main.tf  outputs.tf  variables.tf
